project(tdd)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
include_directories(deps/gtest/include deps/gmock/include)
find_library(GMOCK_LIBRARY gmock deps/gmock)
find_library(GTEST_LIBRARY gtest deps/gtest)
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} ${GMOCK_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARY})

